examples/error/ch0311_err3.jle
# This Program calculates the cost of a rug

display "Let's calculate the cost of a rug", nl;

display "Enter the length and width in feet";
input l;
input w;

display "What is the cost per square foot?", nl;
input c;

# missing colon on the assignment statemnet 
cost = l*w*c
    
display "The cost of the rug is $", cost;